objects/CSAT_Follow_Up__c.object
<CustomObject>
    <fields>
        <fullName>CSAT__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CSAT</label>
        <referenceTo>CSAT__c</referenceTo>
        <relationshipLabel>CSAT Follow Ups</relationshipLabel>
        <relationshipName>CSAT_Follow_Ups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Follow_Up_Notes__c</fullName>
        <label>Follow Up Notes</label>
        <length>50000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Follow_Up_With__c</fullName>
        <label>Follow Up With</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Client</fullName>
                </value>
                <value>
                    <fullName>Employee</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Submitted_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Submitted By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CSAT_Follow_Ups</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>CSAT Follow Up</label>
    <nameField>
        <displayFormat>CFU-{00000}</displayFormat>
        <label>CSAT Follow Up Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CSAT Follow Ups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>